--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
     <div class="container">
         <header class="header">
-            <h1 class="logo">BINARY<span>SIGNALS</span></h1>
+            <h1 class="logo">Profit<span>Signal</span> - Analytics</h1>
             <div class="current-time" id="current-time">00:00:00</div>
         </header>
 
